--- a/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -1,3 +1,32 @@
-<div class="navBar">this is navbar</div>
-<div class="sideBar">this is sidebar</div>
-<router-outlet></router-outlet>
+<p-menubar>
+  <ng-template pTemplate="start">
+    <img
+      src="../../../assets/images/logos/hyperledger.svg"
+      height="40"
+      class="mr-2"
+    />
+    <span class="my-auto">EletronX</span>
+  </ng-template>
+  <ng-template pTemplate="end">
+    <button
+      pButton
+      pRipple
+      type="button"
+      label="LOGOUT"
+      class="p-button-raised p-button-danger p-button-sm"
+      (click)="logout()"
+    >
+      <i class="pi pi-user mx-2"></i>
+    </button>
+  </ng-template>
+</p-menubar>
+
+<div class="wrapper h-screen">
+  <div class="sidebar">
+    <p-menu #menu [model]="items"></p-menu>
+  </div>
+
+  <div class="content">
+    <router-outlet></router-outlet>
+  </div>
+</div>
