--- a/e-commerce/src/app/pages/user-sign-up/user-sign-up.component.html
+++ b/e-commerce/src/app/pages/user-sign-up/user-sign-up.component.html
@@ -1,6 +1,5 @@
 <div class="wrapper">
-  <form [formGroup]="formRef" (ngSubmit)="submit()">
-    <!-- can make the form center and expand background color: class="align-items-center flex justify-content-center lg:px-8 md:px-6 px-4 py-8 surface-ground ng-star-inserted" -->
+  <form [formGroup]="formRef" (ngSubmit)="submit()" class="my-5">
     <div class="surface-card p-4 shadow-2 border-round w-full lg:w-6">
       <div class="text-center mb-5">
         <img
