updated swagger docs and CRUDproduct functionality is fully complete with small functions to sort the table in ascending or descending order and search for specific product

--- a/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -21,7 +21,7 @@
   </ng-template>
 </p-menubar>
 
-<div class="wrapper h-screen">
+<div class="wrapper flex">
   <div class="sidebar">
     <p-menu #menu [model]="items"></p-menu>
   </div>
