--- a/e-commerce/src/app/pages/view-profile/view-profile.component.html
+++ b/e-commerce/src/app/pages/view-profile/view-profile.component.html
@@ -1,8 +1,8 @@
 <p-toast></p-toast>
 
 <div class="wrapper">
-  <form [formGroup]="formRef" (ngSubmit)="submit()" class="my-5">
-    <div class="surface-card p-4 shadow-2 border-round lg:w-6">
+  <form [formGroup]="formRef" (ngSubmit)="submit()">
+    <div class="surface-card p-4 shadow-2 border-round">
       <div class="text-center mb-5">
         <i class="pi pi-user-edit" style="font-size: 2rem"></i>
 
