--- a/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -3,10 +3,14 @@
     <img
       src="../../../assets/images/logos/hyperledger.svg"
       height="40"
-      class="mr-2"
+      class="mr-3"
     />
-    <span class="my-auto">EletronX</span>
+
+    <span class="logoName">EletronX</span>
+
+    <!-- <i class="pi pi-list mx-2" (click)="menu.toggle($event)></i> -->
   </ng-template>
+
   <ng-template pTemplate="end">
     <button
       pButton
@@ -23,6 +27,8 @@
 
 <div class="wrapper flex">
   <div class="sidebar">
+    <!-- <p-menu #menu [model]="items"></p-menu> -->
+
     <p-menu #menu [model]="items"></p-menu>
   </div>
 
