--- a/e-commerce/src/app/pages/view-products/view-products.component.scss
+++ b/e-commerce/src/app/pages/view-products/view-products.component.scss
@@ -82,21 +82,31 @@
       font-weight: 600;
     }
   }
-}
 
-.card {
-  padding: 2rem;
-  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2), 0 1px 1px 0 rgba(0, 0, 0, 0.14),
-    0 1px 3px 0 rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
-  margin-bottom: 2rem;
+  .card {
+    padding: 2rem;
+    box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.2),
+      0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12);
+    border-radius: 4px;
+    margin-bottom: 2rem;
 
-  background: var(--surface-card);
-  padding: 2rem;
-  border-radius: 10px;
-  margin-bottom: 2rem;
+    background: var(--surface-card);
+    padding: 2rem;
+    border-radius: 10px;
+    margin-bottom: 2rem;
 
-  overflow-y: auto;
+    overflow-y: auto;
+  }
+
+  .subHeader {
+    font-weight: 400;
+    margin-bottom: 0.5rem;
+    color: rgba(255, 255, 255, 0.6);
+  }
+
+  .listBadge {
+    width: -webkit-fill-available;
+  }
 }
 
 @media screen and (max-width: 576px) {
