--- a/e-commerce/src/app/pages/view-trans-history/view-trans-history.component.html
+++ b/e-commerce/src/app/pages/view-trans-history/view-trans-history.component.html
@@ -28,7 +28,7 @@
           <p-badge
             [value]="Singleorder.order_status.toUpperCase()"
             [severity]="severityColor(Singleorder.order_status)"
-            styleClass="ml-5"
+            styleClass="mr-2"
           ></p-badge>
         </td>
         <td>
