--- a/e-commerce/src/app/pages/share-own-products/share-own-products.component.scss
+++ b/e-commerce/src/app/pages/share-own-products/share-own-products.component.scss
@@ -1,4 +1,23 @@
 :host ::ng-deep {
+  .pi-exclamation-triangle:before {
+    content: "\e922";
+    color: #cfcf4e;
+  }
+  .p-confirm-dialog-reject,
+  .p-confirm-dialog-reject:hover,
+  .p-confirm-dialog-reject:active {
+    background: none;
+    border: none;
+    color: #f19ea6;
+  }
+
+  .p-confirm-dialog-accept,
+  .p-confirm-dialog-accept:hover,
+  .p-confirm-dialog-accept:active {
+    background: #9fdaa8;
+    border: 1px solid #78cc86;
+  }
+
   .p-paginator {
     .p-paginator-current {
       margin-left: auto;
