--- a/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -13,11 +13,11 @@
       pButton
       pRipple
       type="button"
-      label="LOGOUT"
-      class="p-button-raised p-button-danger p-button-sm"
       (click)="logout()"
+      label="Logout"
+      class="p-button-danger p-button-text"
     >
-      <i class="pi pi-user mx-2"></i>
+      <i class="pi pi-sign-out mx-2"></i>
     </button>
   </ng-template>
 </p-menubar>
@@ -27,3 +27,8 @@
     <router-outlet></router-outlet>
   </div>
 </div>
+
+<p-confirmDialog
+  [style]="{ width: '50vw' }"
+  class="logoutDialog"
+></p-confirmDialog>
