--- a/e-commerce/src/app/pages/user-reset-pw/user-reset-pw.component.html
+++ b/e-commerce/src/app/pages/user-reset-pw/user-reset-pw.component.html
@@ -9,7 +9,7 @@
           class="mb-3"
         />
         <div class="text-900 text-3xl font-medium mb-3">
-          Reset User Password
+          Reset Your Password
         </div>
         <span class="text-600 font-medium line-height-3"
           >Switch to Login page?</span
@@ -27,28 +27,35 @@
       </div>
 
       <div>
-        <label for="usernameInput" class="block text-900 font-medium mb-2"
-          >Username</label
-        >
+        <div class="grid">
+          <div class="col-12">
+            <div class="p-inputgroup">
+              <span class="p-inputgroup-addon"><i class="pi pi-user"></i></span>
+              <input
+                id="usernameInput"
+                type="text"
+                pInputText
+                placeholder="Username"
+                formControlName="username"
+              />
+            </div>
+          </div>
 
-        <input
-          id="usernameInput"
-          type="text"
-          pInputText
-          class="w-full mb-3"
-          formControlName="username"
-        />
-
-        <label for="passwordInput" class="block text-900 font-medium mb-2"
-          >New Password</label
-        >
-        <input
-          id="passwordInput"
-          type="password"
-          pInputText
-          class="w-full mb-3"
-          formControlName="newPassword"
-        />
+          <div class="col-12">
+            <div class="p-inputgroup">
+              <span class="p-inputgroup-addon"
+                ><i class="pi pi-lock-open"></i
+              ></span>
+              <input
+                id="passwordInput"
+                type="password"
+                pInputText
+                placeholder="New Password"
+                formControlName="newPassword"
+              />
+            </div>
+          </div>
+        </div>
 
         <button
           pButton
