--- a/e-commerce/src/app/pages/user-reset-pw/user-reset-pw.component.scss
+++ b/e-commerce/src/app/pages/user-reset-pw/user-reset-pw.component.scss
@@ -1,3 +1,14 @@
+:host ::ng-deep {
+  .p-inline-message-success {
+    margin-left: 4em;
+  }
+}
+
+form {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
 .wrapper {
   background-color: #20262e;
   min-height: 100vh;
@@ -9,10 +20,4 @@
 .w-full {
   margin-left: auto;
   margin-right: auto;
-}
-
-:host ::ng-deep {
-  .p-inline-message-success {
-    margin-left: 4em;
-  }
 }
