--- a/e-commerce/src/app/pages/user-sign-up/user-sign-up.component.html
+++ b/e-commerce/src/app/pages/user-sign-up/user-sign-up.component.html
@@ -9,7 +9,7 @@
           class="mb-3"
         />
         <div class="text-900 text-3xl font-medium mb-3">
-          Create EletronX User
+          Create EletronX Account
         </div>
         <span class="text-600 font-medium line-height-3"
           >Already had an account?</span
@@ -27,114 +27,118 @@
       </div>
 
       <div>
-        <!-- Username-->
-        <label for="usernameInput" class="block text-900 font-medium mb-2"
-          >Username</label
-        >
-        <input
-          id="usernameInput"
-          type="text"
-          pInputText
-          class="w-full mb-3"
-          formControlName="username"
-        />
-
-        <!-- password -->
-        <label for="passwordInput" class="block text-900 font-medium mb-2"
-          >Password</label
-        >
-        <input
-          id="passwordInput"
-          type="password"
-          pInputText
-          class="w-full mb-3"
-          formControlName="password"
-          pPassword
-        />
-
-        <div class="mb-3">
-          <!-- email -->
-          <label for="emailInput" class="block text-900 font-medium mb-2"
-            >Email</label
+        <p-fieldset legend="Login Information">
+          <!-- Username-->
+          <label for="usernameInput" class="block text-900 font-medium mb-2"
+            >Username</label
           >
           <input
-            id="emailInput"
-            type="email"
+            id="usernameInput"
+            type="text"
             pInputText
-            class="w-full"
-            formControlName="email"
-            aria-describedby="email-help"
+            class="w-full mb-3"
+            formControlName="username"
           />
-          <small
-            *ngIf="email?.errors?.['pattern']"
-            id="email-help"
-            class="p-error"
-            >Email is invalid</small
-          >
-        </div>
 
-        <!-- first name -->
-        <label for="fNameInput" class="block text-900 font-medium mb-2"
-          >First Name</label
-        >
-        <input
-          id="fNameInput"
-          type="text"
-          pInputText
-          class="w-full mb-3"
-          formControlName="firstName"
-        />
-
-        <!-- last name -->
-        <label for="lNameInput" class="block text-900 font-medium mb-2"
-          >Last Name</label
-        >
-        <input
-          id="lNameInput"
-          type="text"
-          pInputText
-          class="w-full mb-3"
-          formControlName="lastName"
-        />
-
-        <!-- home address -->
-        <label for="addressInput" class="block text-900 font-medium mb-2"
-          >Address</label
-        >
-        <input
-          id="addressInput"
-          type="text"
-          pInputText
-          class="w-full mb-3"
-          formControlName="homeAddress"
-        />
-
-        <div class="mb-3">
-          <!-- phone number -->
-          <label for="phoneInput" class="block text-900 font-medium mb-2"
-            >Phone Number</label
+          <!-- password -->
+          <label for="passwordInput" class="block text-900 font-medium mb-2"
+            >Password</label
           >
           <input
-            id="phoneInput"
-            type="number"
+            id="passwordInput"
+            type="password"
             pInputText
-            class="w-full"
-            formControlName="phoneNum"
-            aria-describedby="phone-help"
+            class="w-full mb-3"
+            formControlName="password"
+            pPassword
           />
-          <small
-            *ngIf="phoneNum?.errors?.['max']"
-            id="phone-help"
-            class="p-error"
-            >Phone number need to be 10 digits</small
+        </p-fieldset>
+
+        <p-fieldset legend="Contact Information">
+          <div class="mb-3">
+            <!-- email -->
+            <label for="emailInput" class="block text-900 font-medium mb-2"
+              >Email</label
+            >
+            <input
+              id="emailInput"
+              type="email"
+              pInputText
+              class="w-full"
+              formControlName="email"
+              aria-describedby="email-help"
+            />
+            <small
+              *ngIf="email?.errors?.['pattern']"
+              id="email-help"
+              class="p-error"
+              >Email is invalid</small
+            >
+          </div>
+
+          <!-- first name -->
+          <label for="fNameInput" class="block text-900 font-medium mb-2"
+            >First Name</label
           >
-          <small
-            *ngIf="phoneNum?.errors?.['min']"
-            id="phone-help"
-            class="p-error"
-            >Phone number need to be 10 digits</small
+          <input
+            id="fNameInput"
+            type="text"
+            pInputText
+            class="w-full mb-3"
+            formControlName="firstName"
+          />
+
+          <!-- last name -->
+          <label for="lNameInput" class="block text-900 font-medium mb-2"
+            >Last Name</label
           >
-        </div>
+          <input
+            id="lNameInput"
+            type="text"
+            pInputText
+            class="w-full mb-3"
+            formControlName="lastName"
+          />
+
+          <!-- home address -->
+          <label for="addressInput" class="block text-900 font-medium mb-2"
+            >Address</label
+          >
+          <input
+            id="addressInput"
+            type="text"
+            pInputText
+            class="w-full mb-3"
+            formControlName="homeAddress"
+          />
+
+          <div class="mb-3">
+            <!-- phone number -->
+            <label for="phoneInput" class="block text-900 font-medium mb-2"
+              >Phone Number</label
+            >
+            <input
+              id="phoneInput"
+              type="number"
+              pInputText
+              class="w-full"
+              formControlName="phoneNum"
+              aria-describedby="phone-help"
+            />
+            <small
+              *ngIf="phoneNum?.errors?.['max']"
+              id="phone-help"
+              class="p-error"
+              >Phone number need to be 10 digits</small
+            >
+            <small
+              *ngIf="phoneNum?.errors?.['min']"
+              id="phone-help"
+              class="p-error"
+              >Phone number need to be 10 digits</small
+            >
+          </div>
+        </p-fieldset>
 
         <button
           pButton
