--- a/e-commerce/src/app/pages/view-products/view-products.component.html
+++ b/e-commerce/src/app/pages/view-products/view-products.component.html
@@ -6,7 +6,7 @@
     [value]="products"
     [paginator]="true"
     [rows]="6"
-    filterBy="unit_price"
+    filterBy="product_name"
     layout="grid"
     [sortOrder]="sortOrder"
     [sortField]="sortField"
@@ -31,7 +31,7 @@
         <p-button
           label="Cart"
           icon="pi pi-shopping-cart"
-          styleClass="p-button-info"
+          styleClass="p-button-success px-3"
           badge="{{ totalCart }}"
           badgeClass="p-badge-danger"
           (onClick)="onCartClick()"
@@ -53,12 +53,14 @@
           />
 
           <div class="product-list-detail">
-            <div class="product-name">{{ productObject.product_name }}</div>
+            <div class="product-name mb-2">
+              {{ productObject.product_name.toUpperCase() }}
+            </div>
             <div class="product-description">
               {{ productObject.descriptions }}
             </div>
 
-            <span class="product-quality"
+            <span class="product-quality subHeader"
               >Quantity: {{ productObject.quality }}</span
             >
             <br /><br />
@@ -67,12 +69,20 @@
             ><span class="product-category">{{ productObject.category }}</span>
           </div>
           <div class="product-list-action">
-            <span class="product-price">${{ productObject.unit_price }}</span>
+            <button
+              pButton
+              pRipple
+              type="button"
+              label="${{ productObject.unit_price }}"
+              icon="pi pi-money-bill "
+              class="product-price p-button-outlined p-button-warning p-button-lg"
+            ></button>
             <p-button
               icon="pi pi-shopping-cart"
               label="Add to Cart"
               [disabled]="
-                productObject.product_status.toUpperCase() === 'OUTOFSTOCK'
+                productObject.product_status.toUpperCase() === 'OUTOFSTOCK' ||
+                countQualityLimit[productObject.product_id]
               "
               (onClick)="addToCart(productObject)"
             ></p-button>
@@ -80,7 +90,7 @@
             <p-badge
               [value]="productObject.product_status.toUpperCase()"
               [severity]="severityColor(productObject.product_status)"
-              styleClass="ml-5"
+              styleClass=" listBadge"
             ></p-badge>
           </div>
         </div>
@@ -107,24 +117,36 @@
               src="{{ productObject.product_image }}"
               [alt]="productObject.product_name"
               width="100"
+              height="200"
               class="shadow-4"
             />
-            <div class="product-name">{{ productObject.product_name }}</div>
+            <div class="product-name mb-2">
+              {{ productObject.product_name.toUpperCase() }}
+            </div>
+            <div class="product-quality mb-2 subHeader">
+              Quantity: {{ productObject.quality }}
+            </div>
+
             <div class="product-description">
               {{ productObject.descriptions }}
             </div>
-            <span class="product-quality"
-              >Quantity: {{ productObject.quality }}</span
-            >
           </div>
 
           <div class="product-grid-item-bottom">
-            <span class="product-price">${{ productObject.unit_price }}</span>
+            <button
+              pButton
+              pRipple
+              type="button"
+              label="${{ productObject.unit_price }}"
+              icon="pi pi-money-bill "
+              class="product-price p-button-outlined p-button-warning p-button-lg"
+            ></button>
 
             <p-button
               icon="pi pi-shopping-cart"
               [disabled]="
-                productObject.product_status.toUpperCase() === 'OUTOFSTOCK'
+                productObject.product_status.toUpperCase() === 'OUTOFSTOCK' ||
+                countQualityLimit[productObject.product_id]
               "
               (onClick)="addToCart(productObject)"
             ></p-button>
@@ -198,7 +220,7 @@
         icon="pi pi-times"
         (click)="clearOrder()"
         label="Clear"
-        styleClass="p-button-text p-button-danger"
+        styleClass="p-button-text p-button-danger "
       ></p-button>
 
       <p-button
