token validation works, still need to clean the code and do some modification

--- a/e-commerce/src/app/pages/call-to-action/call-to-action.component.html
+++ b/e-commerce/src/app/pages/call-to-action/call-to-action.component.html
@@ -4,7 +4,9 @@
   >
     <div class="font-bold mr-8">🔥 Hot News!</div>
     <div class="align-items-center hidden lg:flex">
-      <span class="line-height-3">A new generation EletronX is launched!</span>
+      <span class="line-height-3"
+        >A new generation RadioShack 2.0 is launched!</span
+      >
     </div>
     <a class="flex align-items-center ml-2 mr-8">
       <a class="text-white"
