--- a/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -6,7 +6,7 @@
       class="mr-3"
     />
 
-    <span class="logoName">EletronX</span>
+    <span class="logoName">RadioShack 2.0</span>
   </ng-template>
   <ng-template pTemplate="end">
     <button
