--- a/e-commerce/src/app/pages/user-sign-up/user-sign-up.component.html
+++ b/e-commerce/src/app/pages/user-sign-up/user-sign-up.component.html
@@ -9,7 +9,7 @@
           class="mb-3"
         />
         <div class="text-900 text-3xl font-medium mb-3">
-          Create EletronX Account
+          Create RadioShack Account
         </div>
         <span class="text-600 font-medium line-height-3"
           >Already had an account?</span
