--- a/e-commerce/src/app/pages/user-login/user-login.component.html
+++ b/e-commerce/src/app/pages/user-login/user-login.component.html
@@ -9,7 +9,7 @@
           class="mb-3"
         />
         <div class="text-900 text-3xl font-medium mb-3">
-          Welcome to EletronX
+          Welcome to RadioShack 2.0
         </div>
         <span class="text-600 font-medium line-height-3"
           >Don't have an account?</span
