added guard file that allow user to back to loginpage if not authorized; finished jwt security; updated swagger docs with jwt version

--- a/e-commerce/src/app/pages/call-to-action/call-to-action.component.html
+++ b/e-commerce/src/app/pages/call-to-action/call-to-action.component.html
@@ -31,8 +31,11 @@
         Join Our Market Community
       </div>
       <div class="text-700 text-2xl mb-5">
-        Upload your product to the national market and sell it to make money in
-        just a minute!
+        Upload your product to the national market and make money in just a
+        minute!
+      </div>
+      <div class="text-700 text-2xl mb-5">
+        We’re in Business to Improve Lives
       </div>
       <button
         pButton
