--- a/e-commerce/src/app/pages/user-login/user-login.component.html
+++ b/e-commerce/src/app/pages/user-login/user-login.component.html
@@ -21,7 +21,7 @@
         >
       </div>
 
-      <div *ngIf="isError" class="mx-8">
+      <div *ngIf="isError" class="mx-8 flex justify-content-center mb-3">
         <p-message severity="error" text="{{ msg }}"></p-message><br /><br />
       </div>
 
