--- a/e-commerce/src/app/pages/user-sign-up/user-sign-up.component.html
+++ b/e-commerce/src/app/pages/user-sign-up/user-sign-up.component.html
@@ -21,7 +21,7 @@
         >
       </div>
 
-      <div *ngIf="isRecMsg" class="mx-8">
+      <div *ngIf="isRecMsg" class="mx-8 flex justify-content-center mb-3">
         <p-message severity="{{ msgType }}" text="{{ msg }}"></p-message
         ><br /><br />
       </div>
