get rid of some unused code; added some css style

--- a/e-commerce/src/app/pages/view-products/view-products.component.html
+++ b/e-commerce/src/app/pages/view-products/view-products.component.html
@@ -31,7 +31,7 @@
         <p-button
           label="Cart"
           icon="pi pi-shopping-cart"
-          styleClass="p-button-success px-3"
+          styleClass="p-button-primary px-3"
           badge="{{ totalCart }}"
           badgeClass="p-badge-danger"
           (onClick)="onCartClick()"
@@ -75,7 +75,7 @@
               type="button"
               label="${{ productObject.unit_price }}"
               icon="pi pi-money-bill "
-              class="product-price p-button-outlined p-button-warning p-button-lg"
+              class="product-price p-button-outlined p-button-success p-button-lg"
             ></button>
             <p-button
               icon="pi pi-shopping-cart"
@@ -139,7 +139,7 @@
               type="button"
               label="${{ productObject.unit_price }}"
               icon="pi pi-money-bill "
-              class="product-price p-button-outlined p-button-warning p-button-lg"
+              class="product-price p-button-outlined p-button-success p-button-lg"
             ></button>
 
             <p-button
