--- a/e-commerce/src/app/pages/user-login/user-login.component.html
+++ b/e-commerce/src/app/pages/user-login/user-login.component.html
@@ -15,7 +15,7 @@
           >Don't have an account?</span
         >
         <a
-          routerLink="/newUser"
+          routerLink="/signUp"
           class="font-medium no-underline ml-2 text-blue-500 cursor-pointer"
           >Create today!</a
         >
