--- a/e-commerce/src/app/pages/user-login/user-login.component.scss
+++ b/e-commerce/src/app/pages/user-login/user-login.component.scss
@@ -1,9 +1,6 @@
 .wrapper {
-  background-color: #20262e;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  margin-top: 3rem;
 }
 
 .w-full {
