--- a/e-commerce/src/app/pages/user-reset-pw/user-reset-pw.component.html
+++ b/e-commerce/src/app/pages/user-reset-pw/user-reset-pw.component.html
@@ -15,7 +15,7 @@
           >Switch to Login page?</span
         >
         <a
-          routerLink="/"
+          routerLink="/login"
           class="font-medium no-underline ml-2 text-blue-500 cursor-pointer"
           >Login today!</a
         >
