--- a/e-commerce/src/app/pages/user-reset-pw/user-reset-pw.component.scss
+++ b/e-commerce/src/app/pages/user-reset-pw/user-reset-pw.component.scss
@@ -10,11 +10,8 @@ form {
 }
 
 .wrapper {
-  background-color: #20262e;
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
+  margin-top: 3rem;
 }
 
 .w-full {
