--- a/e-commerce/src/app/pages/user-sign-up/user-sign-up.component.html
+++ b/e-commerce/src/app/pages/user-sign-up/user-sign-up.component.html
@@ -15,7 +15,7 @@
           >Already had an account?</span
         >
         <a
-          routerLink="/"
+          routerLink="/login"
           class="font-medium no-underline ml-2 text-blue-500 cursor-pointer"
           >Sign In Here!</a
         >
