fixed the bug where the login and  logout button with username are not displayed in the right time; modified some CSS style

--- a/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -8,6 +8,7 @@
 
     <span class="logoName">RadioShack 2.0</span>
   </ng-template>
+
   <ng-template pTemplate="end">
     <div *ngIf="!isLogin">
       <button
@@ -16,14 +17,14 @@
         type="button"
         (click)="login()"
         label="Login"
-        class="p-button-danger p-button-text"
+        class="p-button-success p-button-text"
       >
         <i class="pi pi-user mx-2"></i>
       </button>
     </div>
 
     <div *ngIf="isLogin">
-      <span>Welcome {{ username }}</span>
+      <div class="my-1">Welcome {{ username }}</div>
       <button
         pButton
         pRipple
