refresh token functionality worked, but still need to do some minor modify

--- a/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
+++ b/e-commerce/src/app/pages/user-dashboard/user-dashboard.component.html
@@ -1,4 +1,5 @@
 <p-menubar [model]="items">
+  <!-- {{ tokenComfirmation ? refreshTokenConfirmation() : "" }} -->
   <ng-template pTemplate="start">
     <img
       src="../../../assets/images/logos/hyperledger.svg"
